[tool.poetry]
name = "polext"
version = "0.1.0"
description = "Policy Extraction to Decision Tree"
authors = ["Théo Matricon <theomatricon@gmail.com>", "Nathanaël Fijalkow <nathanael.fijalkow@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Theomat/policy-extraction"

[tool.poetry.dependencies]
python = ">=3.7.1"
numpy = ">=1.23.4"
vose = { git = "https://github.com/Theomat/vose.git"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"